--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJS Library for parsing HL7 Messages",
   "main": "lib/hl7.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/Loksly/node-hl7/issues"
   },
-  "homepage": "https://github.com/Loksly/node-hl7#readme"
+  "homepage": "https://github.com/Loksly/node-hl7#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "encoding": "^0.1.12",
+    "mocha": "^3.1.2"
+  },
+  "dependencies": {
+    "encoding": "^0.1.12"
+  }
 }
